# discord-bridge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CODEOWNERS  rust-ci.yml  rust-release.yml
src/: main.rs
