[package]
name = "discord-bridge-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.221"
serde_derive = "1.0.221"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
